# neuralnet-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  debug.sh  main.sh  module.cpp  train  train.cpp  unit_tests.sh
.github/workflows/: cpp_test.yaml  cpp_test.yml
docs/: conv2d.md  tensor.md
examples/: main.cpp  mlp.cpp  optimizer_example.cpp  test_conv2d.cpp  test_linear.cpp  test_softmax.cpp  test_tensor.cpp
include/core/: loss.hpp  module.hpp  optimizer.hpp  tensor.hpp
include/datasets/: mnist.hpp
include/metrics/: accuracy.hpp
include/models/: cnn.hpp  mlp.hpp
include/modules/activations/: relu.hpp  softmax.hpp
include/modules/containers/: sequential.hpp
include/modules/layers/: conv2d.hpp  dropout.hpp  flatten.hpp  linear.hpp  max_pool.hpp
include/modules/losses/: cross_entropy.hpp  mse.hpp
include/modules/optimizers/: adam.hpp  sgd.hpp
include/utils/: conv2d_utils.hpp  matrix_utils.hpp  tensor_utils.hpp  utils.hpp
src/core/: module.cpp  optimizer.cpp  tensor.cpp
src/datasets/: mnist.cpp
src/metrics/: accuracy.cpp
src/models/: cnn.cpp  mlp.cpp
src/modules/activations/: relu.cpp  softmax.cpp
src/modules/containers/: sequential.cpp
src/modules/layers/: conv2d.cpp  dropout.cpp  flatten.cpp  linear.cpp  max_pool.cpp
src/modules/losses/: cross_entropy.cpp  mse.cpp
src/modules/optimizers/: adam.cpp  sgd.cpp
src/utils/: conv2d_utils.cpp  matrix_utils.cpp  tensor_utils.cpp  utils.cpp
tests/: CMakeLists.txt
tests/core/: module_test.cpp  tensor_test.cpp
